grammar.txt
program ::= {statement}
statement ::= "tuliskan" (expression | string) nl
            | "jika" comparison "maka" nl {statement} "akhiriJika" nl
            | "ketika" comparison "ulangi" nl {statement} "akhiriKetika" nl
            | "misalkan" ident "=" expression nl
            | "masukkan" ident nl
comparison ::= expression (("==" | "!=" | ">" | ">=" | "<" | "<=") expression)+
expression ::= term {( "-" | "+" ) term}
term ::= unary {( "/" | "*" ) unary}
unary ::= ["+" | "-"] primary
primary ::= number | ident
nl ::= '\n'+
